syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option go_package = "./;pb";
package storage;

service Storage {
    rpc ArchiveMetadata(stream Metadata) returns (ArchiveResponse);

    rpc GetStockOne(google.protobuf.StringValue) returns (Stock);
    rpc GetStockAll(google.protobuf.Empty) returns (stream Stock);
    rpc GetQuoteLatest(GetQuoteLatestRequest) returns (stream Quote);
}

message ArchiveResponse {
    message Affected {
        int64 stock = 1;
        int64 quote_day = 2;
        int64 quote_week = 3;
    }
    Affected affected = 1;
}

message Stock {
    string code = 1;
    string name = 2;
    string suspend = 3;
}

message GetQuoteLatestRequest {
    string code = 1;
    string date = 2;
    int64 limit = 3;
    enum Kind {
        Day = 0;
        Week = 1;
    };
    Kind kind = 4;
}

message Quote {
    string code = 1;
    double open = 2;
    double close = 3;
    double high = 4;
    double low = 5;
    double yesterday_closed = 6;
    uint64 volume = 7;
    double account = 8;
    string date = 9;
    int32 num_of_year = 10;
}


message Metadata {
    string source = 1;
    string code = 2;
    string name = 3;
    double open = 4;
    double yesterday_closed = 5;
    double latest = 6;
    double high = 7;
    double low = 8;
    uint64 volume = 9;
    double account = 10;
    string date = 11;
    string time = 12;
    string suspend = 13;

}
